fix: make supabase init robust, add debug logs, and revert wrangler name to debug blank page

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-    "name": "kiana",
+    "name": "alimentos-kiana-b2b",
     "compatibility_date": "2026-01-12",
     "assets": {
         "directory": "./dist"
